Fixed gaps and background color in swap widget and fiat page

--- a/src/styles/base/_core.css
+++ b/src/styles/base/_core.css
@@ -1,16 +1,18 @@
 @import 'tailwindcss/base';
 
 @layer base {
-   body, #root {
-       @apply bg-white md:bg-grey-1 text-blue-4 text-14 font-inter font-normal;
-       @apply dark:bg-blue-4 dark:md:bg-blue-3 dark:text-grey-1;
-   }
+  body,
+  #root {
+    @apply bg-grey-1 text-blue-4 text-14 font-inter font-normal;
+    @apply dark:bg-blue-3 dark:text-grey-1;
+  }
 
-    button, a {
-        @apply outline-none focus:outline-none;
-    }
+  button,
+  a {
+    @apply outline-none focus:outline-none;
+  }
 
-    input {
-        @apply appearance-none;
-    }
+  input {
+    @apply appearance-none;
+  }
 }
